MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Custom_Settings__c/BBCRM__BuzzBoard_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To use disable/enable the BuzzBoard triggers</description>
    <label>BuzzBoard Settings</label>
</CustomObject>