MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Custom_Settings__c/fields/BBCRM__Disable_Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Disable_Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Account trigger</description>
    <label>Disable Account Trigger?</label>
    <type>Checkbox</type>
</CustomField>