MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Custom_Settings__c/fields/BBCRM__Disable_Contact_Trigger__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Disable_Contact_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Contact trigger</description>
    <label>Disable Contact Trigger?</label>
    <type>Checkbox</type>
</CustomField>