MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Custom_Settings__c/fields/BBCRM__Disable_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Disable_Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Lead Trigger</description>
    <label>Disable Lead Trigger?</label>
    <type>Checkbox</type>
</CustomField>